--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "idx": "^2.5.6",
-    "yarn": "^1.22.22"
+    "idx": "^2.5.6"
   },
   "scripts": {
     "dev": "node_modules/.bin/nodemon app/index.js",
